# nu_plugin_from_dhall

./: .envrc  .gitattributes  Cargo.nix  Cargo.toml  flake.nix
nix/devshell/: flake-module.nix
nix/rust-overlay/: flake-module.nix
src/: plugin.rs
